--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="lhs">
-        <h1>notAlan's selenium project</h1>
+        <h1>notAlan Instagram nonFollowers Detecter</h1>
 
         <form action="/" method="POST">
           <label>Username:</label>
@@ -33,9 +33,9 @@
       </div>
 
       <div class="rhs">
-        {% for user in nonfollowers %}
-          <p>{{ user }}</p>
-        {% endfor %}
+        Demo of front end,
+        Not a working model.
+        To try out the program, <a href="https://github.com/notalanjoseph/insta-non-followers/blob/main/README.md">README.</a>
       </div>
     </div>
 
