--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="lhs">
-        <h1>notAlan Instagram nonFollowers Detecter</h1>
+        <h1>notAlan Instagram nonFollowers Detector</h1>
 
         <form action="/" method="POST">
           <label>Username:</label>
@@ -33,9 +33,10 @@
       </div>
 
       <div class="rhs">
-        Demo of front end,
-        Not a working model.
-        To try out the program, <a href="https://github.com/notalanjoseph/insta-non-followers/blob/main/README.md">README.</a>
+        <h3>Demo of front end,</h3>
+        <h3>Not a working model.</h3>
+        <br />
+        <h2>To try out the program, click on <a href="https://github.com/notalanjoseph/insta-non-followers/blob/main/README.md">README.</a> </h2>
       </div>
     </div>
 
